--- a/app/views/Application/map.html
+++ b/app/views/Application/map.html
@@ -12,12 +12,12 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js?"></script>
- <link rel="stylesheet" href="/muni/public/stylesheets/leaflet-0.7.1.css" />
-    <script src="/muni/public/javascripts/muni-mapper.js" type="text/javascript"></script>
+ <link rel="stylesheet" href="/geology/public/stylesheets/leaflet-0.7.1.css" />
+    <script src="/geology/public/javascripts/muni-mapper.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?2.1.3"></script>
 
-        <script src="/muni/public/javascripts/piecharts.js" type="text/javascript"></script>
-            <script src="/muni/public/javascripts/barcharts.js" type="text/javascript"></script>
+        <script src="/geology/public/javascripts/piecharts.js" type="text/javascript"></script>
+            <script src="/geology/public/javascripts/barcharts.js" type="text/javascript"></script>
   
   
     <script src="//code.jquery.com/jquery-1.9.1.js"></script>
@@ -113,7 +113,7 @@ $('#layersTab').click(function(){
 
 
 
-$.get("/muni/getLayers").done(function(dataSTR){
+$.get("/geology/getLayers").done(function(dataSTR){
 
 	var data = jQuery.parseJSON(dataSTR);
  	console.log(data);
@@ -147,7 +147,7 @@ $.get("/muni/getLayers").done(function(dataSTR){
 	$('#layerSearch').autocomplete({
 	    source: function( request, response ) {
 	        $.ajax({
-	          url: "/muni/layerSearch",
+	          url: "/geology/layerSearch",
 	          data: {
 	            name: request.term
 	          },
@@ -167,7 +167,7 @@ $.get("/muni/getLayers").done(function(dataSTR){
 	$('#layerSearchButton').click(function(){
 		var enteredLayer = $('#layerSearch').val();
 		
-		$.get("/muni/validateLayer?name="+enteredLayer).done(function(data){
+		$.get("/geology/validateLayer?name="+enteredLayer).done(function(data){
 			if(data == 'true'){
 				manageLayer($('#layerSearch').val().replace(" ","_"));
 				$('#layerSearch').val('');
@@ -224,7 +224,7 @@ $("#settingsTab").click(function(){
 		    	"color":"#000000",
 		    	"font-weight":"bold"
 			});
-			$('#legends').append('<div id="'+layername+'Legend" class="legend"><b>'+layername.replace(/_/g," ")+'</b><span class="glyphicon glyphicon-remove-circle x-glyph" onClick="manageLayer(\''+layername+'\')"></span><span class ="toggle-checkbox" onClick="toggleLayer(\''+layername+'\')"><input id="'+layername+'Toggler" type = "checkbox" checked></span><br><img src="http://www.mountainhouseproject.com/muni/legend/'+layername+'" alt="some_text"><div>');
+			$('#legends').append('<div id="'+layername+'Legend" class="legend"><b>'+layername.replace(/_/g," ")+'</b><span class="glyphicon glyphicon-remove-circle x-glyph" onClick="manageLayer(\''+layername+'\')"></span><span class ="toggle-checkbox" onClick="toggleLayer(\''+layername+'\')"><input id="'+layername+'Toggler" type = "checkbox" checked></span><br><img src="http://www.mountainhouseproject.com/geology/legend/'+layername+'" alt="some_text"><div>');
 			
 			addLayerToArray(layername);
 		}
@@ -470,8 +470,8 @@ function searchMyNeighborhood(){
    </div>
  
 
-        <script src="/muni/public/javascripts/mapClicks.js" type="text/javascript"></script>
-        <script src="/muni/public/javascripts/mapPans.js" type="text/javascript"></script>
+        <script src="/geology/public/javascripts/mapClicks.js" type="text/javascript"></script>
+        <script src="/geology/public/javascripts/mapPans.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 $('#allLayersAndList').hover(function(){
@@ -535,7 +535,7 @@ $('#address').autocomplete({
 	autoFocus: true,
     source: function( request, response ) {
         $.ajax({
-          url: "/muni/addressSearch",
+          url: "/geology/addressSearch",
           data: {
             address: request.term
           },
@@ -557,7 +557,7 @@ $('#owner').autocomplete({
 	autoFocus: true,
     source: function( request, response ) {
         $.ajax({
-          url: "/muni/ownerSearch",
+          url: "/geology/ownerSearch",
           data: {
             ownerName: request.term
           },
